--- a/clientFolder/manifest/package.xml
+++ b/clientFolder/manifest/package.xml
@@ -87,6 +87,10 @@
         <members>*</members>
         <name>Layout</name>
     </types>
+        <types>
+        <members>*</members>
+        <name>CustomTab</name>
+    </types>
     <types>
         <members>*</members>
         <name>FlexiPage</name>
