--- a/clientFolder/manifest/package.xml
+++ b/clientFolder/manifest/package.xml
@@ -42,6 +42,10 @@
         <members>Admin</members>
         <name>Profile</name>
     </types>
+        <types>
+        <members>*</members>
+        <name>Role</name>
+    </types>
     <types>
         <members>*</members>
         <name>Layout</name>
