--- a/clientFolder/manifest/package.xml
+++ b/clientFolder/manifest/package.xml
@@ -5,15 +5,6 @@
         <name>GlobalValueSet</name>
     </types>
     <types>
-        <members>Custom-HR</members>
-        <members>Custom-Manager</members>
-        <members>Custom-Shop</members>
-        <members>Custom: Sales Profile</members>
-        <members>Custom: Support Profile</members>
-        <members>Admin</members>
-        <name>Profile</name>
-    </types>
-    <types>
         <members>Product2</members>
         <name>CustomObject</name>
     </types>
@@ -34,17 +25,8 @@
         <name>CustomObject</name>
     </types>
     <types>
-        <members>Custom-HR</members>
-        <members>Custom-Manager</members>
-        <members>Custom-Shop</members>
-        <members>Custom: Sales Profile</members>
-        <members>Custom: Support Profile</members>
-        <members>Admin</members>
-        <name>Profile</name>
-    </types>
-        <types>
         <members>*</members>
-        <name>Role</name>
+        <name>CustomTab</name>
     </types>
     <types>
         <members>*</members>
@@ -62,7 +44,10 @@
         <members>*</members>
         <name>ReportFolder</name>
     </types>
-    
+        <types>
+        <members>*</members>
+        <name>FlexiPage</name>
+    </types>
     <types>
         <members>*</members>
         <name>Dashboard</name>
@@ -91,13 +76,27 @@
         <members>*</members>
         <name>Layout</name>
     </types>
-        <types>
+    <!--<types>
         <members>*</members>
-        <name>CustomTab</name>
+        <name>Profile</name>
+    </types>
+    Use the * to deploy all profile settings after this commit.
+    Afterwards, list the specific profiles that are relevant to this project.
+    The profiles with the colon won't properly deploy object permissions, so keep this in mind
+    in case you need to create a new object or profile. -->
+
+    <types>
+        <members>Admin</members>
+        <members>Custom-HR</members>
+        <members>Custom-Manager</members>
+        <members>Custom-Shop</members>
+        <members>Custom: Sales Profile</members>
+        <members>Custom: Support Profile</members>
+        <name>Profile</name>
     </types>
     <types>
         <members>*</members>
-        <name>FlexiPage</name>
+        <name>Role</name>
     </types>
     <version>52.0</version>
 </Package>
