--- a/clientFolder/manifest/package.xml
+++ b/clientFolder/manifest/package.xml
@@ -25,6 +25,10 @@
         <name>CustomObject</name>
     </types>
     <types>
+        <members>Contact</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
         <members>*</members>
         <name>CustomTab</name>
     </types>
@@ -76,15 +80,14 @@
         <members>*</members>
         <name>Layout</name>
     </types>
-    <types>
+    <!--<types>
         <members>*</members>
         <name>Profile</name>
     </types>
-    <!--Use the * to deploy all profile settings after this commit.
+    <Use the * to deploy all profile settings after this commit.
     Afterwards, list the specific profiles that are relevant to this project.
     The profiles with the colon won't properly deploy object permissions, so keep this in mind
-    in case you need to create a new object or profile.
-
+    in case you need to create a new object or profile. -->
     <types>
         <members>Admin</members>
         <members>Custom-HR</members>
@@ -93,7 +96,7 @@
         <members>Custom: Sales Profile</members>
         <members>Custom: Support Profile</members>
         <name>Profile</name>
-    </types> -->
+    </types>
     <types>
         <members>*</members>
         <name>Role</name>
