Third shop app commit
Contains quick action meta

--- a/clientFolder/manifest/package.xml
+++ b/clientFolder/manifest/package.xml
@@ -89,6 +89,10 @@
         <name>ApexClass</name>
     </types>
     <types>
+		<members>*</members>
+		<name>QuickAction</name>
+	</types>
+    <types>
         <members>*</members>
         <name>Layout</name>
     </types>
