Monday Second commmit
with static resources

--- a/clientFolder/manifest/package.xml
+++ b/clientFolder/manifest/package.xml
@@ -133,5 +133,9 @@
         <members>*</members>
         <name>ExperienceBundle</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>StaticResource</name>
+    </types>
     <version>52.0</version>
 </Package>
