fixed visibility issues on apps

--- a/clientFolder/manifest/package.xml
+++ b/clientFolder/manifest/package.xml
@@ -46,6 +46,7 @@
     </types>
     <types>
         <members>Shop_App</members>
+        <members>Human_Resources</members>
         <name>CustomApplication</name>
     </types>
     <types>
